<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="@dimen/main_padding"
    tools:context="com.example.android.businesscard.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/pizza_picture_height"
            android:contentDescription="@string/picture_desc"
            android:scaleType="centerCrop"
            android:src="@drawable/pizza" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:padding="@dimen/padding_large"
            android:text="@string/app_name"
            android:textColor="@color/Johnny_heading"
            android:textSize="@dimen/Johnny_heading_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_large"
            android:text="@string/header2"
            android:textColor="@android:color/black"
            android:textSize="@dimen/header2"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:contentDescription="@string/icon_desc"
                        android:src="@drawable/phone4" />

                    <TextView
                        android:id="@+id/telefon"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/icon_size"
                        android:gravity="center"
                        android:onClick="intentDial"
                        android:paddingLeft="@dimen/padding_from_picture"
                        android:text="@string/phone_number"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/desc_text_size"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/padding_small">

                    <ImageView
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:contentDescription="@string/icon_desc"
                        android:src="@drawable/clock" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/icon_size"
                        android:gravity="center"
                        android:paddingLeft="@dimen/padding_from_picture"
                        android:text="@string/open_hours"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/desc_text_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/padding_small">

                    <ImageView
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:contentDescription="@string/icon_desc"
                        android:src="@drawable/www" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/icon_size"
                        android:autoLink="web"
                        android:gravity="center"
                        android:paddingLeft="@dimen/padding_from_picture"
                        android:text="@string/url"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/desc_text_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/padding_small">

                    <ImageView
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:contentDescription="@string/icon_desc"
                        android:src="@drawable/map_marker" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/icon_size"
                        android:gravity="center"
                        android:onClick="intentMap"
                        android:paddingLeft="@dimen/padding_from_picture"
                        android:text="@string/address"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/desc_text_size" />
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/padding_large"
            android:text="@string/bon_apetit"
            android:textColor="@android:color/black"
            android:textStyle="italic" />
    </LinearLayout>

</ScrollView>
